# Python-API-Automation-Framework

./: .gitignore  Dockerfile  FRAMEWORK_SUMMARY.md  README.md  behave.ini  docker-compose.yml  pretty.output  pyproject.toml
.claude/: settings.local.json
docs/: API_REORGANIZATION_SUMMARY.md  CI_CD_TROUBLESHOOTING.md  FRAMEWORK_RULES.md  FRAMEWORK_SUMMARY.md  GITHUB_SETUP.md
environments/: .env.dev  .env.railway  .env.staging  .env.test
features/: __init__.py  environment.py
scripts/: generate_failure_summary.py  restart_wiremock.bat  run_tests.ps1  run_tests.sh  run_tests_with_wiremock.py  setup_environment.sh
steps/: auth_steps.py  common_steps.py  data_steps.py
support/: environment.py
test-reports/: 007cf60d-e1e5-4ce3-bb14-cd7f39a457ae-result.json  05447bc7-ca27-4bec-b0a6-2d77cbf413f7-attachment.csv  0de67e57-4219-4284-a57f-3a31f3a326f5-result.json  10909623-418a-45f0-a41b-cee02bd60f2f-result.json  116f414a-8ea3-46a5-a572-507b42a3e571-result.json  11c008a9-c57c-4ea7-b027-81e468504dc4-result.json  1323351e-af07-467e-b153-e4b8aa59dd0f-result.json  13a0d514-464d-446d-b69d-dcbd32adfb5d-result.json  1898ab9a-d6e1-40e7-9222-b808736518a6-result.json  19a34248-0f61-4f24-a0eb-a46464b9f890-attachment.txt  1c0ae04b-cfce-4690-a684-97be22dca48a-result.json  247285d7-c5db-4796-8708-73da5aa6e3b4-result.json  25325d13-2bce-498e-a95c-c1fa5aa33eb3-attachment.csv  25a8ae62-b8a7-40bd-9e93-3883eb151af2-result.json  2637b288-01dd-42eb-9aea-fcdd6dcac7ad-result.json  2ccf62d5-d433-49b1-a788-6e4154c6afe2-result.json  367e1d69-8da2-49d0-8e35-7712023d45f5-result.json  3a65b49b-9513-49c5-99ab-17a371302ffe-attachment.txt  3b7d5d0f-1e77-41e5-91ba-ae5bb68e9b6c-result.json  3c27db20-8b66-416c-a065-11dd21936f44-result.json  3c755500-eb31-4a31-a466-ed8ca6f8bad4-attachment.txt  3d9bef63-448b-4ef6-9172-82c9121c8c91-result.json  3eb91182-f6d8-448c-b47f-106ead374526-result.json  3effaedd-898f-4476-869b-5fe1ba3dec48-result.json  40d47550-2617-4d07-b270-0936f1224653-result.json  423c2ad4-9dac-48a4-8177-07627c2bef0b-attachment.txt  46d14e93-b683-496b-ac50-ab5dc889d9d7-result.json  4a78d65f-74d6-422f-bdd4-9d7d6e2cb968-result.json  4e0d4c23-1fb5-4081-a0d4-7bab8ce6f6f3-result.json  4f2e254a-b8d7-4eb3-8877-f0c3e98265a1-attachment.txt  4f7df8a2-6126-4ac5-8abf-06a015a65abe-result.json  510227f7-f1a6-41c3-a083-19dc3fa9fcda-result.json  52b6ed2a-b18d-4f09-b0e7-7dd6a200fd48-attachment.txt  52d0024f-64d3-45c7-987e-9022e9c46f91-result.json  5350ff88-61d6-48ca-8c02-ef2375fa2630-attachment.txt  53f397b0-1659-4cb8-905e-c402e117f83e-result.json  579f237a-32d0-48ce-8b0d-c7ed1fda640b-result.json  5cb19d32-5770-4436-824c-51c36dd312a2-result.json  5d28eced-3179-4957-88c5-2b237779cd13-result.json  5e50385e-cee3-4623-ab36-67d926556559-result.json  (+71 more)
tools/: comprehensive_analyzer.py  failure_analyzer.py  reset_wiremock_scenarios.py  run_parallel.py  run_tests_with_analysis.py  test_error_mapping.py  test_steps.py  (+1 more)
(+1531 files in other folders)
