[tool.poetry]
name = "banking-api-bdd-tests"
version = "0.1.0"
description = "BDD Test Framework for Banking API using Wiremock"
authors = ["Senior SDET Team <team@company.com>"]
readme = "README.md"
packages = [{include = "features"}]

[tool.poetry.dependencies]
python = "^3.11"
behave = "^1.2.6"
requests = "^2.31.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
allure-behave = "^2.13.2"
pytest = "^7.4.3"
pytest-html = "^4.1.1"
pytest-xdist = "^3.5.0"
faker = "^20.1.0"
jsonschema = "^4.20.0"
urllib3 = "^2.1.0"
certifi = "^2023.11.17"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"
coverage = "^7.3.2"
bandit = {extras = ["toml"], version = "^1.7.5"}
safety = "^2.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]

[tool.coverage.run]
source = ["features"]
omit = ["*/tests/*", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]